--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
   - docker push samuelhenriquebr/multi-nginx
   - docker push samuelhenriquebr/multi-server
   - docker push samuelhenriquebr/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "multi-docker"
+  env: "Multidocker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-461596899094"
+  bucket_path: "docker-multi"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_KEY
